--- a/pres/surf_2023/anova.qmd
+++ b/pres/surf_2023/anova.qmd
@@ -61,7 +61,7 @@ To conduct a hypothesis test, we compute a test statistic based on the distribut
 
 ## Test Statistic
 
-A test statistic determines the quantifies the distance of the observed $\hat\mu$ with the hypothesized mean $\mu_0$,  assuming null hypothesis is true.
+A test statistic determines the quantifies the distance of the observed $\hat\mu$ with the hypothesized mean $\mu_0$, assuming null hypothesis is true.
 
 ## Rejection Region
 
@@ -77,7 +77,6 @@ There are 3 types of null and alternative hypothesis, The first type of hypothes
 | $H_0: \mu\le\mu_0$ | $H_a: \mu>\mu_0$       | 1-sided |
 | $H_0: \mu\ge\mu_0$ | $H_0: \mu<\mu_0$       | 1-sided |
 
-
 ## Rejection Region
 
 ![](https://www.researchgate.net/publication/333914148/figure/fig1/AS:772049484128256@1561082349475/Rejection-and-non-rejection-regions-of-the-null-hypothesis.png){fig-align="center"}
@@ -88,9 +87,9 @@ The p-value approach is one of the most common methods to report significant res
 
 | Alternative Hypothesis | p-value                 |
 |------------------------|-------------------------|
-| $\mu>\mu_0$            | $P(X>T(x))=p$           |
-| $\mu<\mu_0$            | $P(X<T(x))=p$           |
-| $\mu\ne\mu_0$          | $2\times P(X>|T(X)|)=p$ |
+| $\mu>\mu_0$            | $P(Y>T(x))=p$           |
+| $\mu<\mu_0$            | $P(Y<T(x))=p$           |
+| $\mu\ne\mu_0$          | $2\times P(Y>|T(x)|)=p$ |
 
 If $p < \alpha$, then you reject $H_0$; otherwise, you will fail to reject $H_0$.
 
@@ -98,7 +97,7 @@ If $p < \alpha$, then you reject $H_0$; otherwise, you will fail to reject $H_0$
 
 ## Analysis of Variance
 
-Analysis of variance (ANOVA) tests to whether there is a difference between a collection of means while we control the family-wise error rate.
+Analysis of variance (ANOVA) tests to whether there is a difference between a collection of means (experimental variable) while we control the family-wise error rate.
 
 ## Hypothesis
 
@@ -109,7 +108,7 @@ $H_a:$ At least one mean pair is different
 ## Anova Table
 
 | Source | DF        | SS            | MS                    | F                   |
-|--------------|--------------|--------------|-----------------|---------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Group  | $DFG=k-1$ | $SSG$         | $MSG=\frac{SSG}{DFG}$ | $F=\frac{MSG}{MSE}$ |
 | Error  | $DFE=N-k$ | $SSE$         | $MSE=\frac{SSE}{DFE}$ |                     |
 | Total  | $TDF=N-1$ | $TSS=SSG+SSE$ |                       |                     |
@@ -144,71 +143,69 @@ $SSE = \sum^k_{i=1}\sum^{n_i}_{j=1}(y_{ij}-\bar y_{i.})^2$
 
 ## Assumptions
 
-- Independence
+-   Independence
 
-    - Were observations collected randomly?
+    -   Were observations collected randomly?
 
-- Normality
+-   Normality
 
-    - QQ Plot
+    -   QQ Plot
 
-    - Shapiro-Wilks Test
+    -   Shapiro-Wilks Test
 
-- Equal Variance
+-   Equal Variance
 
-    - Bartlett's Test
+    -   Bartlett's Test
 
-    - Levene's Test
+    -   Levene's Test
 
 # Multiple Comparison Tests
 
 ## Multiple Comparison Tests
 
-- Fisher's Least Significance Difference
+-   Fisher's Least Significance Difference
 
-- Bonferroni's Test
+-   Bonferroni's Test
 
-- Scheffe's Test
+-   Scheffe's Test
 
-- Tukey's Honest Significant Difference
+-   Tukey's Honest Significant Difference
 
 ## Bonferroni's Tests
 
-- Bonferroni's Test conducts a set of $k$ t-tests to each mean pair
+-   Bonferroni's Test conducts a set of $k$ t-tests to each mean pair
 
-- Controls family-wise error rate by dividing $\alpha/k$
-
+-   Controls family-wise error rate by dividing $\alpha/k$
 
 ## Scheffe's Test
 
-- Scheffe's method compares mean square difference between full and reduced models.
+-   Scheffe's method compares mean square difference between full and reduced models.
 
-- It ensures control of the family-wise error rate by testing the largest and smallest model.
+-   It ensures control of the family-wise error rate by testing the largest and smallest model.
 
-- Scheffe's tests the following hypothesis: $H_0: \sum_i\lambda_i\mu_i=0$
+-   Scheffe's tests the following hypothesis: $H_0: \sum_i\lambda_i\mu_i=0$
 
 ## Tukey's Honest Significant Difference Tests
 
-- Tukey's test will look for the pairs that are greater than the HSD value. HSD value is the minimum absolute difference needed for a pair of means to be considered different.
+-   Tukey's test will look for the pairs that are greater than the HSD value. HSD value is the minimum absolute difference needed for a pair of means to be considered different.
 
-- This method requires a balanced design ($n_1=n_2=\ldots=n_k=n$)
+-   This method requires a balanced design ($n_1=n_2=\ldots=n_k=n$)
 
 ## Comparison of Methods
 
-- Bonferroni's Method
-    - Use Bonferroni's method if you were interested in testing different mean pairs before you started to collect data.
-    - Good for balanced and unbalanced designs
-    - Considered the least conservative method (most likely to reject $H_0$)
-- Scheffe's Method
-    - Use Scheffe's method if you are interested data-driven differences.
-    - Can test linear combinations
-    - Good for unbalanced designs
-    - Considereded more conservative method (least likely to reject $H_0$)
-- Tukey's HSD
-    - Use Tukey's HSD when you are interested in testing difference of all mean pairs.
-    - Good for balanced designs.
-    - Considered more conservative method (least likely to reject $H_0$)
-
+-   Bonferroni's Method
+    -   Use Bonferroni's method if you were interested in testing different mean pairs before you started to collect data.
+    -   Good for balanced and unbalanced designs
+    -   Considered the least conservative method (most likely to reject $H_0$)
+-   Scheffe's Method
+    -   Use Scheffe's method if you are interested data-driven differences.
+    -   Can test linear combinations
+    -   Good for unbalanced designs
+    -   Considereded more conservative method (least likely to reject $H_0$)
+-   Tukey's HSD
+    -   Use Tukey's HSD when you are interested in testing difference of all mean pairs.
+    -   Good for balanced designs.
+    -   Considered more conservative method (least likely to reject $H_0$)
 
 # Two-way ANOVA
 
@@ -216,15 +213,17 @@ $SSE = \sum^k_{i=1}\sum^{n_i}_{j=1}(y_{ij}-\bar y_{i.})^2$
 
 Two-way ANOVA is a one-way ANOVA that was adjusted by a grouping variable.
 
+A two-way ANOVA will test whether the if interaction between the experimental and control variable affects mean of outcomes, if the experimental variable affects the means of outcomes, and the control variables affects the means of outcomes.
+
 ## Anova Table
 
 | Source | DF               | SS                | MS                    | F                     |
-|--------|------------------|-------------------|-----------------------|-----------------------|
+|---------------|---------------|---------------|---------------|---------------|
 | Grp    | $DFG=G-1$        | $SSG$             | $MSG=\frac{SSG}{DFG}$ | $F_G=\frac{MSG}{MSE}$ |
 | Adj    | $DFA=A-1$        | $SSA$             | $MSA=\frac{SSA}{DFA}$ | $F_A=\frac{MSA}{MSE}$ |
 | Int    | $DFI=(G-1)(A-1)$ | $SSI$             | $MSI=\frac{SSI}{DFI}$ | $F_I=\frac{MSI}{MSE}$ |
 | Error  | $DFE=AGK-AG$     | $SSE$             | $MSE=\frac{SSE}{DFE}$ |                       |
-| Total  | $TDF=AGK-1$      | $TSS=SSG+SSA+SSE$ |   
+| Total  | $TDF=AGK-1$      | $TSS=SSG+SSA+SSE$ |                       |                       |
 
 -   $A:$ Number of Adjusted groups
 
@@ -234,18 +233,20 @@ Two-way ANOVA is a one-way ANOVA that was adjusted by a grouping variable.
 
 ## Order of Analysis
 
-- $H_0:$ No interaction Effect
+-   $H_0:$ No interaction Effect
 
-  - Reject $H_0:$ Conduct 1-way Anova
-  - Otherwise: Remove from model and move on to next step
+    -   Reject $H_0:$ Conduct multiple comparisons tests
+    -   Otherwise: Remove interaction from the model and move on to next step
 
-- $H_0:$ No Adjustment Effect
+-   $H_0:$ No Control Effect
 
-  - Reject $H_0:$ Keep in model, move on to next step
-  - Otherwise: Remove from model, move one to next step
-  
-- $H_0$: No Experimental Group Effect
-  - Reject $H_0:$ Move on to multiple comparison
+    -   Reject $H_0:$ Keep in model, move on to next step
+    -   Otherwise: Remove control variable from model, move one to next step
+
+-   $H_0$: No Experimental Group Effect
+
+    -   Reject $H_0:$ Conduct multiple comparison tests
+    -   Otherwise: Check if control variable makes experimental variable significant. If so, use model with both experimental and control variable and run multiple comparison tests.
 
 # R Code
 
@@ -258,10 +259,17 @@ df <- ToothGrowth %>% mutate(dose = as.character(dose))
 df %>% summary()
 ```
 
+## ToothGrowth Data
+
+The `ToothGrowth` data is built in R for further analysis. It provides the length (`len`) tooth cells in 60 guinea pigs. It measures whether dosage (`dose`: 0.5, 1, 2), and/or supplement (`supp`: OJ or VC) has an affect on tooth cells. Researchers are also interested if there is an interaction between supplement and dose. 
 
 ## Grouped Statistics
 
 ::: panel-tabset
+
+### Description
+
+We will need to obtain basic descriptive statistics on cell length for each group (dosage and supplement).
 
 ### R Code
 
@@ -273,7 +281,6 @@ summary_df <- df %>% group_by(supp, dose) %>% summarize(mean = mean(len),
 summary_df %>% print
 ```
 
-
 ### Output
 
 ```{r}
@@ -282,13 +289,16 @@ summary_df <- df %>% group_by(supp, dose) %>% summarize(mean = mean(len),
                                        sd = sd(len)) 
 summary_df %>% print
 ```
-
 :::
 
 ## Graphical Visualization
 
 ::: panel-tabset
 
+### Description
+
+Create Boxplots to show the relationship of length data with respect to dosage and supplement.
+
 ### Code
 
 ```{r}
@@ -301,6 +311,7 @@ df %>% ggplot(aes(x=supp,
 ```
 
 ### Output
+
 ```{r}
 #| echo: false
 
@@ -309,13 +320,16 @@ df %>% ggplot(aes(x=supp,
                   color = dose)) + geom_boxplot() +
         theme_bw()
 ```
-
 :::
 
 ## Graphical Output
 
 ::: panel-tabset
 
+### Description
+
+Create a scatter and line plot to display relationship with dosage and supplement by length.
+
 ### Code
 
 ```{r}
@@ -328,9 +342,9 @@ df %>% ggplot(aes(x = as.numeric(dose),
                       y = mean,
                       color = supp),
                   summary_df) +
+        xlab("Dosage") +
         theme_bw()
 ```
-
 
 ### Output
 
@@ -344,24 +358,25 @@ df %>% ggplot(aes(x = as.numeric(dose),
                       y = mean,
                       color = supp),
                   summary_df) +
+        xlab("Dosage") +
         theme_bw()
 ```
-
-
 :::
-
 
 ## 1-Way ANOVA
 
-
 ::: panel-tabset
+
+### Description
+
+Conduct a 1-way anova using the `aov()` function and obtain the ANOVA table using the `anova()` function. Testing whether dosage has an effect on tooth length. Note, keep dosage as a character variable in R because it is numeric.
 
 ### Code
 
 ```{r}
 #| eval: false
-one_aov <- df %>% aov(len ~ dose, .)
-Anova(one_aov)
+one_aov <- aov(len ~ dose, df)
+anova(one_aov)
 ```
 
 ### Output
@@ -369,37 +384,66 @@ Anova(one_aov)
 ```{r}
 #| echo: false
 one_aov <- df %>% aov(len ~ dose, .)
-Anova(one_aov)
+anova(one_aov)
 ```
-
 :::
 
 ## 2-Way ANOVA
 
 ::: panel-tabset
 
+### Description
+
+Conduct a 2-way ANOVA using the `aov()` function and obtain the ANOVA table using the `anova()` function. Testing whether dosage has an effect on tooth length. We are also incorporating an interaction term.
+
 ### Code
 
 ```{r}
 #| eval: false
-two_aov <- df %>% aov(len ~ dose*supp, .)
-Anova(two_aov)
+two_aov <- aov(len ~ dose * supp, df)
+anova(two_aov)
 ```
-
 
 ### Output
 
 ```{r}
 #| echo: false
 two_aov <- df %>% aov(len ~ dose*supp, .)
+anova(two_aov)
 Anova(two_aov)
+Anova(two_aov, type = 3)
 ```
+:::
+
+## 2-way ANOVA: No Interaction
+
+::: panel-tabset
+
+### Description
+
+Conduct a 2-way ANOVA using the `aov()` function and obtain the ANOVA table using the `Anova()` function. Testing whether dosage has an effect on tooth length. We are also excluding an interaction term.
+
+### Code
+
+```{r}
+#| eval: false
+two_aov_add <- aov(len ~ dose + supp, df)
+anova(two_aov_add)
+```
+
+### Output
+
+```{r}
+#| echo: false
+two_aov_add <- df %>% aov(len ~ dose + supp, .)
+anova(two_aov_add)
+```
+:::
 
 
 ## Diagnostics
 
 ::: panel-tabset
-
 ### Linearity
 
 ```{r}
@@ -412,6 +456,8 @@ plot(two_aov, 1)
 leveneTest(two_aov)
 ```
 
+Fail to Reject $H_0$ is good here!
+
 ### Normality
 
 ```{r}
@@ -423,13 +469,38 @@ plot(two_aov, 2)
 ```{r}
 shapiro.test(resid(two_aov))
 ```
+
+Fail to Reject $H_0$ is good here!
+
 :::
 
 ## TukeyHSD
+
+::: panel-tabset
+
+### Tukey HSD
 
 ```{r}
 TukeyHSD(two_aov)
 ```
 
 
+### Comparison Plot
 
+```{r}
+#| echo: false
+df %>% ggplot(aes(x = as.numeric(dose), 
+                  y = len,
+                  color = supp)) + 
+        geom_point() +
+        geom_line(aes(x = as.numeric(dose),
+                      y = mean,
+                      color = supp),
+                  summary_df) +
+        xlab("Dosage") +
+        theme_bw()
+
+```
+
+
+:::
