--- a/books/01-Teach-your-students-how-to-learn/index.qmd
+++ b/books/01-Teach-your-students-how-to-learn/index.qmd
@@ -17,7 +17,7 @@ Saundra Yancy McGuire and Stephanie McGuire
 
 Before I read this book, I attended a talk by Dr. Saundra McGuire on her book *Teach Students How to Learn*, and I was shocked on how effective her strategies were in helping students ace their classes. Honestly, it sounded to good to be true. BUT, Dr. McGuire experience made me believe in the potential of those strategies. Therefore, I decided I wanted to learn more by reading her book.
 
-Her book is bueatifully written, and explained the study strategies in a thoughtful. Additionally, I agree with her that teaching students about metacognition and Bloom's taxonomy is important. I wish I knew about it when I was in college[^1]. After reading this book, I am definitely planning to incorporate some of her recommended strategies in my classes.
+Her book is beautifully written, and explained the study strategies in a thoughtful. Additionally, I agree with her that teaching students about metacognition and Bloom's taxonomy is important. I wish I knew about it when I was in college[^1]. After reading this book, I am definitely planning to incorporate some of her recommended strategies in my classes.
 
 [^1]: A phrase she probably has heard a million times.
 
