--- a/books/03-Educated/index.qmd
+++ b/books/03-Educated/index.qmd
@@ -13,7 +13,7 @@ Educated
 Tara Westover
 :::
 
-*Currently Reading*
+*Reflection Coming Soon!*
 
 ::: {.callout-note icon="false"}
 ## Book Availability
