--- a/books/03-Educated/index.qmd
+++ b/books/03-Educated/index.qmd
@@ -13,7 +13,11 @@ Educated
 Tara Westover
 :::
 
-*Reflection Coming Soon!*
+All I can think of is Wow! This powerful memoir that captures experience of the author being home-schooled while growing up and then trying to navigate the dynamics of Academia, your upbringings, and family. While reading the book, I was learning about key life-moments that helped explain the transformation she went through in the end.
+
+While I cannot relate to the majority of this book, as I received a grade-school education, there were times that I felt the same thing as the author in questioning my belonging in my academic career. Being a first-generation child of immigrants, I find my self doubting my own abilities constantly and wondering what it is this for. I probably can go on about this topic, but ultimately, I may be looking for something in academia that is different from the author.
+
+A piece advice when reading this book, read all the beginning parts of the book.
 
 ::: {.callout-note icon="false"}
 ## Book Availability
