--- a/books/06-Happiness/index.qmd
+++ b/books/06-Happiness/index.qmd
@@ -2,7 +2,7 @@
 title: "Happiness"
 date: "2023-07-22"
 image: https://www.hachettebookgroup.com/wp-content/uploads/2017/06/9780316167253.jpg
-categories: [learning]
+categories: [psychology,empowerment]
 ---
 
 ::: {.callout-tip icon="false"}
