--- a/courses.qmd
+++ b/courses.qmd
@@ -10,9 +10,9 @@ editor: visual
 ::: {.panel-tabset .nav-pills}
 ## AY 23-24
 
--   Math 201: Elementary Statistics
+-   [Math 201: Elementary Statistics](https://www.inqs.info/m201_f23/)
 
--   Math 398: Advanced Research Investigation
+-   [Math 398: Advanced Research Investigation](https://www.inqs.info/m398_f23/)
 
 -   Math 408: Advanced Data Analysis
 
