--- a/cv/cv.qmd
+++ b/cv/cv.qmd
@@ -426,7 +426,7 @@ format:
   \vspace{3pt}
 \end{normalsize}
 ```
--   Magdalen0, Francisco, **Salinas INQ**, and Rothstein, Stephen. Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. Journal of Language Evolution
+-   Magdaleno, Francisco, **Salinas INQ**, and Rothstein, Stephen. Vocal Functional Flexibility in a Non-Primate Vocal Learning Species. Journal of Language Evolution
 
 ```{=tex}
 \begin{normalsize}
@@ -434,8 +434,7 @@ format:
   \vspace{3pt}
 \end{normalsize}
 ```
--   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching
-    in statistics courses. Journal of Statistics and Data Science Education. doi.org/10.1080/26939169.2023.2231036
+-   Flores A., Parker Cappiello L., **Quintanilla Salinas I**. (2023) Challenges and successes of emergency online teaching in statistics courses. Journal of Statistics and Data Science Education. doi.org/10.1080/26939169.2023.2231036
 
 -   Gill AS, Perez L, **Salinas INQ**, Byers SR, Liu Y, Hickey BL, Zhong W, Hooley RJ. Selective Array-based Sensing of Anabolic Steroids in Aqueous Solution by Host:Guest Reporter Complexes. Chemistry. 2019. 25(7):1740-1745. doi: 10.1002/chem.201804854
 
