--- a/books/09-Solito/index.qmd
+++ b/books/09-Solito/index.qmd
@@ -2,7 +2,7 @@
 title: "Solito"
 date: "2023-08-25"
 image: https://m.media-amazon.com/images/I/81JRZb2bfaL._AC_UF1000,1000_QL80_.jpg
-categories: [learning]
+categories: [memoir]
 ---
 
 ::: {.callout-tip icon="false"}
